chore: optimizing table merges

--- a/notebooks/DataCleaning.ipynb
+++ b/notebooks/DataCleaning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,30 +49,65 @@
     "\n",
     "        self.output_file = output_file\n",
     "\n",
-    "        # Read category data using pandas `read_csv` function\n",
-    "        self.categories = pd.read_csv(self.parent_grandparent_categories)\n",
-    "\n",
     "        # Initialize list with features of interest to select from categories data\n",
-    "        self.categories_of_interest = [\"plaid_category_id\",\n",
-    "                                       \"category_name\",\n",
-    "                                       \"parent_category_name\",\n",
-    "                                       \"grandparent_category_name\"]\n",
+    "        self.category_categories_of_interest = [\"plaid_category_id\",\n",
+    "                                                \"category_name\",\n",
+    "                                                \"parent_category_name\",\n",
+    "                                                \"grandparent_category_name\"]\n",
+    "        \n",
+    "        self.BA_categories_of_interest = [\"id\",\"current_balance_cents\", \n",
+    "                                          \"updated_at\",\n",
+    "                                          \"created_at\",\n",
+    "                                          \"name\",\n",
+    "                                          \"account_subtype\",\n",
+    "                                          \"plaid_account_id\", \n",
+    "                                          \"plaid_financial_authentication_id\", \n",
+    "                                          \"available_balance_cents\", \n",
+    "                                          \"initial_balance_cents\"]\n",
+    "        \n",
+    "        self.PFA_categories_of_interest = [\"id\",\n",
+    "                                           \"institution_name\",\n",
+    "                                           \"user_id\",\n",
+    "                                           \"updated_at\",\n",
+    "                                           \"created_at\",\n",
+    "                                           \"last_status_update_at\"]\n",
+    "        \n",
+    "        self.PMT_categories_of_interest = [\"category_id\",\n",
+    "                                           \"plaid_account_id\", \n",
+    "                                           \"bank_account_id\", \n",
+    "                                           \"id\", \n",
+    "                                           \"amount_cents\", \n",
+    "                                           \"purpose\",\n",
+    "                                           \"date\", \n",
+    "                                           \"created_at\", \n",
+    "                                           \"updated_at\"]\n",
     "        \n",
     "        # Read PFA sheet of transaction_data_tables Excel notebook, dropping duplicates\n",
     "        self.PFA = pd.read_excel(self.transaction_data_tables, \n",
     "                                 \"PFA\").drop_duplicates()\n",
+    "        self.PFA = self.PFA.copy()\n",
+    "        self.PFA = self.PFA[self.PFA_categories_of_interest]\n",
     "        \n",
     "        # Read BA sheet of transaction_data_tables Excel notebook, dropping duplicates\n",
     "        self.BA = pd.read_excel(self.transaction_data_tables, \n",
     "                                \"BA\").drop_duplicates()\n",
+    "        self.BA = self.BA.copy()\n",
+    "        self.BA = self.BA[self.BA_categories_of_interest]\n",
     "        \n",
     "        # Read PMT sheet of transaction_data_tables Excel notebook\n",
     "        self.PMT = pd.read_excel(self.transaction_data_tables, \n",
     "                                 \"PMT\")\n",
+    "        self.PMT = self.PMT.copy()\n",
+    "        self.PMT_subset = self.PMT[self.PMT_categories_of_interest]\n",
     "\n",
+    "        # Read category data using pandas `read_csv` function\n",
+    "        self.categories = pd.read_csv(self.parent_grandparent_categories)\n",
+    "        self.categories = self.categories.copy()\n",
+    "        self.categories = self.categories[self.category_categories_of_interest]\n",
+    "        \n",
     "        # Merge PMT table with Plaid spending categories\n",
-    "        self.PMT_categories = pd.merge(self.PMT, \n",
-    "                                       self.categories[self.categories_of_interest], \n",
+    "        self.PMT_categories = pd.merge(self.PMT_subset, \n",
+    "                                       self.categories, \n",
     "                                       left_on=\"category_id\", \n",
     "                                       right_on=\"plaid_category_id\")\n",
     "        \n",
@@ -80,16 +115,17 @@
     "        self.PMT_categories_BA = pd.merge(self.PMT_categories, \n",
     "                                          self.BA, \n",
     "                                          left_on=\"bank_account_id\", \n",
-    "                                          right_on=\"id\")\n",
+    "                                          right_on=\"id\",\n",
+    "                                          suffixes=(\"\", \"_BA\"))\n",
     "        \n",
     "        # Merge PMT_categories_BA with PFA table\n",
     "        self.PMT_categories_BA_PFA = pd.merge(self.PMT_categories_BA, \n",
     "                                              self.PFA, \n",
     "                                              left_on=\"plaid_financial_authentication_id\", \n",
-    "                                              right_on=\"id\")\n",
+    "                                              right_on=\"id\", suffixes=(\"_PMT\", \"_PFA\"))\n",
     "        \n",
-    "        # Save PMT_categories_BA_PFA to local CSV file at output_file\n",
-    "        self.PMT_categories_BA_PFA.to_csv(self.output_file)\n",
+    "        # Save PMT_categories_BA_PFA to local CSV file at output_file (probably change to to_json or to_sql)\n",
+    "        #self.PMT_categories_BA_PFA.to_csv(self.output_file)\n",
     "\n",
     "        # Return success statement to inform user of completion\n",
     "        print(\"It worked\")"
@@ -97,12 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It worked\n"
+     ]
+    }
+   ],
    "source": [
-    "SaverLifeSavers(parent_grandparent_categories=\"/home/alex/Downloads/parent_grandparent_categories copy.csv\",\n",
-    "                transaction_data_tables=\"/home/alex/Downloads/PFA_BA_PMT_Table_examples.xlsx\").clean_and_save(\"transaction_data.csv\")"
+    "test = Transactions(parent_grandparent_categories=\"/home/alex/Downloads/parent_grandparent_categories copy.csv\",\n",
+    "                transaction_data_tables=\"/home/alex/Downloads/PFA_BA_PMT_Table_examples.xlsx\")\n",
+    "\n",
+    "test.clean_and_save(\"\")"
    ]
   }
  ],
